# dynamic-data-structures

./: CMakeLists.txt  README.md  main.cpp  z.cpp
base/collections/doubleLinkedKList/: doubleLinkedLIst.cpp
base/collections/doubleLinkedList/: doubleLinkedList.h
base/collections/doubleLinkedListBasedOnDynamicArray/: doubleLinkedListBasedOnDynamicArr.h
base/collections/doubleLinkedListDirectory/: doubleLinkedList.h
base/collections/dynamicArrayDirectory/: dynamicArray.h  dynamicArrayUnitTests.cpp  dynamicArrayUnitTests.h
base/collections/linkedListDirectory/: linkedList.h  linkedListUnitTests.cpp  linkedListUnitTests.h
base/sequence/: sequenceAbstract.h
base/sequence/implementations/arraySequenceImpl/: arraySequence.h  arraySequenceUnitTests.cpp  arraySequenceUnitTests.h
base/sequence/implementations/listSequence/: listSequence.h  listSequenceUnitTests.cpp  listSequenceUnitTests.h
deque/: deque.cpp  deque.h  dequeUnitTests.cpp  dequeUnitTests.h
menu/: main.cpp  menu.h
queue/: queue.cpp  queue.h  queueUnitTests.cpp  queueUnitTests.h
segmentedDeque/: segmentedDeque.h  segmentedDequeTest.cpp  segmentedDequeTest.h
stack/: stack.cpp  stack.h  stackUnitTests.cpp  stackUnitTests.h  stack_realization.cpp
